# ML-API-Speed-Comparison

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  requirements.txt  tree.md
benchmarks/: Dockerfile  benchmark.py  concurrent_load_test.py  run_load_test.sh  wrk.Dockerfile
benchmarks/scripts/: run_benchmarks.sh  start_python.sh  start_rust.sh
benchmarks/wrk_scripts/: post.lua
model/: Dockerfile  train_model-1lin.py  train_model-2mlp.py  train_model-3mlpdeeper.py  train_model.py
python-api/: main.py  requirements.txt
python-api/api/: models.py  routes.py
python-api/core/: inference.py
rust-api/: Cargo.toml  Dockerfile
rust-api/src/: main.rs
rust-api/src/api/: handlers.rs  models.rs
rust-api/src/core/: inference.rs
