[workspace]
members = ["rust-api"]
resolver = "2"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
ort = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }